Style: Fixed wrapping issues

--- a/src/components/elements/BaseBadge/BaseBadge.scss
+++ b/src/components/elements/BaseBadge/BaseBadge.scss
@@ -1,5 +1,6 @@
 .base-badge {
   display: inline-block;
+  width: fit-content;
   background-color: var(--clr-bg-neutral);
   padding: 0 0.6em;
   padding-bottom: 0.1em;
